Changed Factory: dynamic types are now available as copies of the types. refactored many methods to one method that creates sensor or rule. Refactored a lot.